# pygame-space-invaders

./: .gitignore  README.md  pyproject.toml
lab3/: main.py
lab3/space_invaders/: game.py
lab3/space_invaders/src/: gamestats.py  menu_utils.py
lab3/space_invaders/src/config/: gamestats.json  gamestats.py  settings.py  settings.yaml
lab3/space_invaders/src/sprites/: alien.py  background.py  bullet.py  explosion.py  ship.py  ship_rocket.py
lab3/space_invaders/src/sprites/enemies/: air_defensor.py  attacker.py  defensor.py  dreadnought.py  enemy.py  rocketer.py
lab3/space_invaders/src/sprites/weapon/: air_laser.py  blaster.py  energy_shield.py  laser.py  rocket.py  weapon.py
