[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["Levkov Gleb <Glebchanskiy@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3"
pygame-menu = "^4.3.8"

[tool.poetry.scripts]
game = "lab3.main:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
